# industrial-ai-showcase

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  phase-2-additions.md
.claude/: CLAUDE.md
.github/workflows/: deploy-learning-guide.yml
assets/: README.md
charts/factory/: Chart.yaml  values.yaml
charts/factory/templates/: _helpers.tpl  camera-feed.yaml  configmap.yaml  edge-broker.yaml  edge-inference.yaml  factory-dashboard.yaml  networkpolicy.yaml  pvc.yaml  scc.yaml  service.yaml  serviceaccount.yaml
charts/mlops/: Chart.yaml  values-production.yaml  values.yaml
charts/mlops/templates/: NOTES.txt  _helpers.tpl  dspa.yaml  kueue-local-queue.yaml  minio-bucket-init.yaml  minio.yaml  mlflow.yaml  model-registry-cr.yaml  model-registry.yaml  pipeline-rbac.yaml  pvcs.yaml  secrets.yaml  serving-auth.yaml  serving.yaml  tao-specs-configmap.yaml  training-runtime.yaml
charts/platform/: Chart.yaml  values.yaml
charts/platform/templates/: _helpers.tpl  central-broker.yaml  configmap.yaml  dashboard.yaml  isaac-sim.yaml  pvc.yaml  route.yaml  scc.yaml  service.yaml  serviceaccount.yaml
console/: README.md
console/backend/: Containerfile  README.md  package-lock.json  package.json  tsconfig.json
console/backend/src/: argoSync.ts  config.ts  demoState.ts  governance.ts  kafkaStream.ts  server.ts  stream.ts
console/frontend/: .npmrc  Containerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
console/frontend/src/: App.tsx  ArchitectureView.tsx  FleetView.tsx  LineageView.tsx  MjpegCanvas.tsx  PlatformGovernanceTab.tsx  Stage.tsx  WebRtcStream.tsx  api.ts  main.tsx  showcase.css  types.ts
demos/: review-synthesis.md
demos/20-min-architecture/: script.md
demos/60-min-deep-dive/: script.md
demos/warehouse-baseline/: script.md
docs/: 00-project-charter.md  01-architecture-overview.md  02-component-catalog.md  03-data-flows.md  04-phased-plan.md  05-sales-enablement.md  06-repo-structure.md  07-decisions.md  08-gpu-resource-planning.md  09-risks-and-open-questions.md  README.md  licensing-gates.md
docs/deployment/: phase-0-plan.md
docs/learning-guide/: mkdocs.yml
docs/learning-guide/docs/: index.md
docs/plans/: hil-approval-drawer-design.md  phase-0-exit-review.md  phase-0-plan.md  phase-2-plan.md
docs/sales-enablement/: differentiator-mapping.md  fleet-scale-operating-math.md  physical-ai.drawio  security-posture.md
docs/sales-enablement/one-pagers/: phase-0-foundation.md  phase-1-warehouse-baseline.md  phase-2-architecture-walkthrough.md
images/camera-feed/: Containerfile  server.py
images/dashboard/: Containerfile  index.html  nginx.conf
images/inference-sidecar/: Containerfile
infrastructure/baseline/: companion-state.md  osd-hub-state.md
infrastructure/gitops/: README.md
infrastructure/gitops/bootstrap/: argocd-cluster-admin.yaml  root-application.yaml  subscription.yaml
infrastructure/security/fips/: README.md
pipelines/: isaac_training_pipeline.py  isaac_training_pipeline.yaml
tests/smoke/gpu/: l4.yaml  (+1 more)
tools/companion-install/: README.md  agent-config.yaml  capture-baseline.sh  install-config.template.yaml  virt-install.sh
values/: ai-showcase-factory-a.yaml  ai-showcase-factory-b.yaml  central.yaml
workloads/: README.md
workloads/camera-adapter/: README.md  pyproject.toml
workloads/camera-adapter/container/: Containerfile
workloads/camera-adapter/src/camera_adapter/: __init__.py  cosmos_client.py  main.py  settings.py
workloads/common/python-lib/: README.md  pyproject.toml
workloads/common/python-lib/src/common_lib/: __init__.py  config.py  events.py  kafka.py  logging.py
workloads/cosmos/: README.md
workloads/fake-camera/: README.md  pyproject.toml
workloads/fleet-manager/: README.md  pyproject.toml
workloads/isaac-lab/: README.md
workloads/isaac-sim/: README.md
workloads/kit-app-streaming/: README.md
workloads/langgraph-orchestrator/: README.md
workloads/mcp-servers/: README.md
workloads/mes-stub/: pyproject.toml
workloads/mission-dispatcher/: README.md  pyproject.toml
workloads/mlflow/: README.md
workloads/nucleus/: README.md
workloads/obstruction-detector/: README.md  pyproject.toml  trial.py
workloads/obstruction-detector/container/: Containerfile
workloads/obstruction-detector/src/obstruction_detector/: __init__.py  cosmos_client.py  debounce.py  detector.py  main.py  settings.py
workloads/obstruction-detector/tests/: test_detector.py
workloads/vla-serving-host/: README.md  pyproject.toml
workloads/vla-serving-host/ansible/: README.md  inventory.yml  site.yml
workloads/vla-serving-host/ansible/templates/: openvla-server.container.j2
workloads/vla-serving-host/container/: Containerfile
workloads/vla-serving-host/src/openvla_server/: __init__.py  main.py  model.py  settings.py
workloads/vla-serving-pod/: README.md
workloads/vla-training/: pyproject.toml  vla_finetune_pipeline.yaml
workloads/warehouse/: README.md  warehouse-topology.yaml
workloads/wms-stub/: README.md  pyproject.toml
(+434 files in other folders)
