# This project was developed with assistance from AI tools.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obstruction-detector"
version = "0.1.0"
description = "Hub-side VLM-driven obstruction detector — consumes camera frames, calls Cosmos Reason 2-8B, emits fleet.safety.alerts."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "structlog>=24.4.0,<26.0",
    "confluent-kafka>=2.6.0,<3.0",
    "httpx>=0.28.0,<1.0",
    "tenacity>=9.0.0,<10.0",
    "common-lib",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0,<1.0",
    "mypy>=1.13.0,<2.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
]

[tool.uv.sources]
common-lib = { path = "../common/python-lib", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
