# This project was developed with assistance from AI tools.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-lib"
version = "0.1.0"
description = "Shared Python utilities for the industrial-ai-showcase workloads."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "structlog>=24.4.0,<26.0",
    "opentelemetry-api>=1.28.0,<2.0",
    "opentelemetry-sdk>=1.28.0,<2.0",
    "confluent-kafka>=2.6.0,<3.0",
]

[project.optional-dependencies]
tracking = [
    "mlflow-skinny>=2.18.0,<3.0",
]
otlp = [
    "opentelemetry-exporter-otlp>=1.28.0,<2.0",
]
dev = [
    "ruff>=0.8.0,<1.0",
    "mypy>=1.13.0,<2.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
